fix: center icon alignment in maintenance section

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -516,7 +516,7 @@ footer .line-footer p a {
         height: 75vh;
      }
      section.manutencao i{
-        padding-left: 65px;
+        text-align: center;
      }
 
      section.manutencao h3{
